incremental save, tidy up
